--- a/TestSystem/TestSystem.vcxproj.filters
+++ b/TestSystem/TestSystem.vcxproj.filters
@@ -33,5 +33,13 @@
     <ClCompile Include="..\TestORB\TestSystem\TestNamingService.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\TestORB\TestSystem\pch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\TestORB\TestSystem\pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
